--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id "com.google.gms.google-services"
 }
 
-
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -14,16 +13,18 @@ if (localPropertiesFile.exists()) {
     }
 }
 
+def keystoreProperties = new Properties()
+   def keystorePropertiesFile = rootProject.file('key.properties')
+   if (keystorePropertiesFile.exists()) {
+       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+   }
+
+   
+
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
-
-
-//apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
-//apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 34
@@ -47,15 +48,38 @@ android {
         targetSdkVersion 34
         versionCode 17
         versionName '2.2.1'
+        multiDexEnabled true
     }
 
-    buildTypes {
-        release {
-            signingConfig signingConfigs.debug
-            minifyEnabled false
-            shrinkResources false
-        }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
     }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
+    signingConfigs {
+           release {
+               keyAlias keystoreProperties['keyAlias']
+               keyPassword keystoreProperties['keyPassword']
+               storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+               storePassword keystoreProperties['storePassword']
+           }
+       }
+        buildTypes {
+           release {
+              // TODO: Add your own signing config for the release build.
+              // Signing with the debug keys for now,
+              // so `flutter run --release` works.
+                signingConfig signingConfigs.debug
+              signingConfig signingConfigs.release
+           }
+        }
     buildToolsVersion '29.0.3'
 }
 
@@ -67,9 +91,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10"
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
     implementation 'androidx.multidex:multidex:2.0.1'
-//    implementation 'com.mercadopago.android.px:checkout:4.+'
-    implementation('com.braintreepayments.api:drop-in:5.2.1'){
+    implementation('com.braintreepayments.api:drop-in:5.2.1') {
         exclude group: "org.jfrog.cardinalcommerce.gradle", module: "cardinalmobilesdk"
     }
-    // implementation("org.jfrog.cardinalcommerce.gradle:cardinalmobilesdk:2.2.7-2")
 }
