--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,9 +111,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   build_runner: ^2.4.8
   mobx_codegen: ^2.6.0+1
+  # # image_path: ""
+  # android: true
+  # ios: true
   #flutter packages pub run build_runner build --delete-conflicting-outputs
 
 dependency_overrides:
